--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "@kalimahapps/vue-icons": "^1.7.1",
+    "@pinia/nuxt": "^0.11.0",
     "@vite-pwa/nuxt": "^1.0.0",
     "nuxt": "^3.17.0",
+    "pinia": "^3.0.2",
     "vue": "^3.5.13",
     "vue-router": "^4.5.1"
   }
