--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@kalimahapps/vue-icons": "^1.7.1",
+    "@nuxtjs/strapi": "^2.0.0",
     "@pinia/nuxt": "^0.11.0",
     "@vite-pwa/nuxt": "^1.0.0",
     "nuxt": "^3.17.0",
